--- a/Account.html
+++ b/Account.html
@@ -39,7 +39,66 @@
             <br>
             <br>
             <a href="Delete.php"> <button class="acc-buttons"> Delete Account</button></a>
-       
+        </div>
+        <form method="POST" action=" ">
+            <!-- Your form content here -->
+            <div class="square2">
+                <h2 class="h3-title-bold-uppercase">
+                    SIGN IN
+                    <p class="sq1-small-writing">
+                        Sign in to your account to add
+                        or edit your addresses and
+                        email preferences, save
+                        your Pro Filt'r # to your profile and
+                        more.
+                    </p>
+                    <input type="text" name="Email" placeholder="Email">
+                    <input type="text" name="Password" placeholder="Password">
+                </h2>
+                <input class="acc-buttons" type="submit" value="Submit" name="Submit">
+            </div>
+        </form>
+        <div class="square3">
+            <h2 class="h3-title-bold-uppercase">
+                CREATE ACCOUNT
+                <h3 class="subtitle">
+                    GET YOUR FAVES FASTER
+
+                    <p class="sq1-small-writing">
+
+                        Save your order information to make checkout a breeze.
+                    </p>
+
+                </h3>
+                <h3 class="subtitle">
+                    EXCLUSIVE OFFERS + INFO
+
+                    <p class="sq1-small-writing">
+
+                        Sign up to stay posted on hyper-limited offers,
+                        online-only product drops, in-store events,
+                        and—as true Fenty and Rhode ,
+                        personal beauty tips from Rihanna herself.
+                    </p>
+
+                </h3>
+
+            </h2>
+            <br>
+            <a href="signup.php"> <button class="acc-buttons"> CREATE ACCOUNT</button></a>
+        </div>
+    </div>
+    <div class="square4">
+        <h2 class="h3-title-bold-uppercase">
+            CHECK YOUR ORDER STATUS
+            <p class="sq1-small-writing">
+                To check your order status, you may
+                SIGN IN, CREATE ACCOUNT, or click
+                the links found in your order confirmation
+                or shipping notification emails.</p>
+        </h2>
+    </div>
+
 </body>
 
 </html>
