--- a/signup.html
+++ b/signup.html
@@ -24,3 +24,27 @@
                 <div class="err"><span id="FnameERR"></span> <span id="LnameERR"></span></div>
                 <input type="email" name="Email" required="" placeholder="Email Address">
                 <span id="eErr" class="err"></span>
+
+
+
+                <input type="password" name="Password" placeholder="Password" required="">
+                <span id="pErr" class="err"></span>
+                <input type="password" name="passConfirm" placeholder="Confirm Password" required="">
+                <span id="pcErr" class="err"></span>
+                <br>
+                <select name="months" required="">
+                    <option value=""> Months</option>
+                    <option value="january">January</option>
+                    <option value="february">February</option>
+                    <option value="march">March</option>
+                    <option value="april">April</option>
+                    <option value="may">May</option>
+                    <option value="june">June</option>
+                    <option value="july">July</option>
+                    <option value="august">August</option>
+                    <option value="september">September</option>
+                    <option value="october">October</option>
+                    <option value="november">November</option>
+                    <option value="december">December</option>
+
+                </select>
