--- a/signup.html
+++ b/signup.html
@@ -82,3 +82,34 @@
                     <option value="30"> 30</option>
                     <option value="31"> 31</option>
                 </select>
+                <input type="submit" name="Submit" value="Create Account">
+            </form>
+        </div>
+        <div class="benefits">
+            <h2>Account Benefits</h2>
+            <p>
+            </p>
+            <h4>GET YOUR FAVES FASTER</h4>
+            Save your order information to
+            make checkout a breeze.
+            <p></p>
+            <p>
+            </p>
+            <h4>EXCLUSIVE OFFERS + INFO</h4>
+            Sign up to stay posted on hyper-
+            limited offers, online-only
+            product drops, in-store events.
+            <p></p>
+            <p>
+            </p>
+            <h4>ORDER DETAILS</h4>
+            Receive important updates about
+            your order, and track it every
+            step of the way.
+            <p></p>
+        </div>
+    </div>
+
+</body>
+
+</html>
