--- a/Account.html
+++ b/Account.html
@@ -53,7 +53,7 @@
                         more.
                     </p>
                     <input type="text" name="Email" placeholder="Email">
-                    <input type="text" name="Password" placeholder="Password">
+                    <input type="password" name="Password" placeholder="Password">
                 </h2>
                 <input class="acc-buttons" type="submit" value="Submit" name="Submit">
             </div>
