--- a/addtocart.html
+++ b/addtocart.html
@@ -12,6 +12,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@500&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="cart.css" >
+<script src="addtocart2.js"></script>
+
 
 <title>Add to cart</title>
 </head>
