--- a/Admin Dashboard.html
+++ b/Admin Dashboard.html
@@ -14,8 +14,7 @@
         <aside>
             <div class="top">
                 <div class="logo">
-                   <img src="logo.png">
-                    <!-- <h2><span class="danger">Jamila</span></h2>  -->
+                   <img src="imgs/loulylogo.png">
                 </div>
                 <div class="close" id="close-button">
                     <span class="material-icons-sharp">close</span>
@@ -26,7 +25,7 @@
                 <span class="material-icons-sharp">grid_view</span>
                 <h3>Dashboard</h3>
                </a> 
-               <a href="#">
+               <a href="search.php">
                 <span class="material-icons-sharp">person</span>
                 <h3>Users Accounts</h3>
                </a> 
@@ -34,15 +33,15 @@
                 <span class="material-icons-sharp">person</span>
                 <h3>Admin Accounts</h3>
                </a> 
-               <a href="#">
+               <a href="admin_addproduct.php">
                 <span class="material-icons-sharp">receipt_long</span>
                 <h3>Add product</h3>
                </a> 
-               <a href="#">
+               <a href="edits.php">
                 <span class="material-icons-sharp">insights</span>
                 <h3>Edit Product</h3>
                </a> 
-               <a href="#">
+               <a href="edits.php">
                 <span class="material-icons-sharp">mail_outline</span>
                 <h3>Delete product</h3>
                 <span class="message-count">26</span>
@@ -52,7 +51,7 @@
                 <span class="material-icons-sharp">report_gmailerrorred</span>
                 <h3>Orders</h3>
                </a> 
-               <a href="#">
+               <a href="Account.php">
                 <span class="material-icons-sharp">logout</span>
                 <h3>Log out</h3>
                </a> 
@@ -210,11 +209,11 @@
                 <div class="admin">
                     <div class="profile">
                         <div class="info">
-                            <p>Hey, <b>Admin</b></p>
-                            <small class="text-muted">Admin</small>
+                            <p>Hey, Admin</p>
+                            <!-- <small class="text-muted">Admin</small> -->
                         </div>
                         <div class="profile-photo">
-                            <img src="Adham.png" alt="">
+                            <img src="imgs/usericon.jpg" alt="">
                         </div>
                     </div>
                     
@@ -229,7 +228,7 @@
                     <h2>Order-Details</h2>
                         <div class="update">
                         <div class="profile-photo">
-                            <img src="Areej.png" alt="">
+                            <img src="imgs/usericon.jpg" alt="">
                         </div>
                         <div class="message">
                             <p><b>Areej Ahmed </b> recieved her order of Night lion tech GPS drone.</p>
@@ -238,7 +237,7 @@
                         </div>
                         <div class="update">
                         <div class="profile-photo">
-                            <img src="Shahd1.png" alt="">
+                            <img src="imgs/usericon.jpg" alt="">
                         </div>
                         <div class="message">
                             <p><b>Shahd Tamer </b> declined her order of 2 DJI Air 2S.</p>
@@ -247,7 +246,7 @@
                         </div>
                         <div class="update">
                         <div class="profile-photo">
-                            <img src="Shahd2.png" alt="">
+                            <img src="imgs/usericon.jpg" alt="">
                         </div>
                         <div class="message">
                             <p><b>shahd Ibrahim </b> recieved her order of LARVENDER KF102 Drone.</p>
