--- a/addtocart.html
+++ b/addtocart.html
@@ -27,51 +27,54 @@
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 </span>
                 <span class="innerdetails2">
-                    0 items &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    1 item &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 </span>
                 <span class="innerdetails3">
-                    EGP0.00 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    EGP 450 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 </span>
             </div>
             <div class="headerr2">
                 <p>WELCOME&nbsp;BACK&nbsp;!</p>
             </div>
             <div class="gift">
-                <p class="p2">Add EGP‌5,100.00 to your cart to qualify<br> for a FREE gift!</p>
+                <p class="p2">Add EGP‌ 1,100.00 to your cart to qualify<br> for a FREE gift!</p>
                 <button class="btn3">ADD YOUR GIFT</button>
             </div>
             <div class="bag">
-                    <p class="p1">YOUR BAG IS EMPTY</p>
-                    <button class="btn1"> SHOP FENTY BEAUTY</button>
+                    <!-- <p class="p1">YOUR BAG IS EMPTY</p> -->
+                    <img src="imgs/crossbag.jpg" alt="" style="width: 90px;">
+                    <p>Crossbag</p>
+                    <p>price: 450</p>
+                    <button class="btn1"> <a href="checkout.php">CHECKOUT</a></button>
                     <br>
                     <br>
-                     <button class="btn2"> SHOP FENTY SKIN</button>
+                     <!-- <button class="btn2"> SHOP FENTY SKIN</button> -->
             </div>
         </div>
         <div class="recommended">
             <p class="p3">RECOMMENDED PRODUCTS</p>
             <div class="row1">
                 <div class="column1">
-                    <img src="main product.jpeg"  style="width:70%">
+                    <img src="imgs/handbag.jpg"  style="width:70%;height: 150px;">
                     <p class="newtext">NEW</p>
-                    <p class="title1">MELT AWF JELLY OIL MAKEUP-MELTING CLEANSER</p>
+                    <p class="title1">GREEN HAND BAG </p>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span> 
-                    <br><br>
+                    <br><br><br><br>
                     <p><button class="textbtn">ADD TO BAG<br>EGP1,400.00</button></p>
                 </div>
                         
                 <div class="column1">
-                    <img src="nflbag.jpeg"  style="width:70%">
+                    <img src="imgs/waistbag.jpg"  style="width:70%;height: 150px;">
                     <p class="onlinetext">ONLINE EXCLUSIVE</p>
-                    <p class="title2">NFL STADIUM BAG</p>
+                    <p class="title2">SHOULDER BAG</p>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
@@ -81,21 +84,22 @@
                     <p><button class="text2btn">ADD TO BAG <br> EGP1,050.00</button></p>
                 </div>
                 <div class="column1">
-                    <img src="velvet.jpeg"  style="width:70%">
+                    <img src="imgs/rounded.JPG"  style="width:70%;height: 150px;">
                     <p class="gamedaytext">GAME DAY LIMITED EDITION<br>ONLINE EXCLUSIVE</p>
-                    <p class="title3">FENTY ICON VELVET LIQUID</p>
+                    <p class="title3"> ROUNDED BAG</p>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span> 
-                    <p Class="gamedaytext"> RIRI</p>
+                    <br><br><br>
+                    <!-- <p Class="gamedaytext"> RIRI</p> -->
                     <p><button class="text3btn">ADD TO BAG <br> EGP1,200.00</button></p>
                 </div>
             </div>
         </div>
         <div class="subtotal">
-            <p class="subtext">SubTotal-0 items</p>
+            <p class="subtext">SubTotal-1 items</p>
             <p class="subtext2">Need assistance?</p>
             <p>call&nbsp;<a class="number"href=#>1-855-440-7474</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <a class="number"href=#>Free 30 Day Returns</a></p>
