--- a/Admin Dashboard.html
+++ b/Admin Dashboard.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
-    <link rel="stylesheet" href="Dashboard.css">
+    <link rel="stylesheet" href="css/Dashboard.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp"/>
     
     
@@ -24,6 +24,9 @@
                <a href="#" class="active">
                 <span class="material-icons-sharp">grid_view</span>
                 <h3>Dashboard</h3>
+                <a href="homee.php" class="active">
+                    <span class="material-icons-sharp">grid_view</span>
+                    <h3>Home Page</h3>
                </a> 
                <a href="search.php">
                 <span class="material-icons-sharp">person</span>
