--- a/makeup.html
+++ b/makeup.html
@@ -15,10 +15,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300&family=Tinos&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="makeup.css">
+    <link rel="stylesheet" href="css/makeup.css">
 
-    <link rel="stylesheet" href="nav.css">
-    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/footer.css">
 
 
 
