--- a/signup.html
+++ b/signup.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="signup.css">
+    <link rel="stylesheet" href="css/signup.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@300&amp;family=Space+Grotesk:wght@300&amp;display=swap"
         rel="stylesheet">
