products names changed in admindashboard

--- a/html/Admin Dashboard.html
+++ b/html/Admin Dashboard.html
@@ -160,28 +160,28 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>Dreamy Blusher</td>
+                            <td>cross bag</td>
                             <td>85631</td>
                             <td>Due</td>
                             <td class="warning">Pending</td>
                             <td class="primary">Details</td>
                         </tr>
                         <tr>
-                            <td>Love cake bronzer</td>
+                            <td>rounded bag</td>
                             <td>85631</td>
                             <td>Due</td>
                             <td class="warning">Pending</td>
                             <td class="primary">Details</td>
                         </tr>
                         <tr>
-                            <td>jamila lipstick</td>
+                            <td>shoulder bag</td>
                             <td>85631</td>
                             <td>Due</td>
                             <td class="warning">Pending</td>
                             <td class="primary">Details</td>
                         </tr>
                         <tr>
-                            <td>foundation101</td>
+                            <td>hand bag</td>
                             <td>85631</td>
                             <td>Due</td>
                             <td class="warning">Pending</td>
